# omninative-ui

./: .gitignore  README.md  pyproject.toml  setup_env.bat
docs/: AI_PROMPT.md  DOC_TRACKER.md  INDEX.md
docs/core/: component-development.md  ui-chat.md  ui-containers.md  ui-core.md  ui-inputs.md  ui-media.md  ui-overlays.md  ui-system.md
examples/: demo.py
omninative_ui/: __init__.py  _utils.py  chat.py  containers.py  core.py  icons.py  inputs.py  media.py  overlays.py  tokens.py
