[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omninative-ui"
version = "0.1.2"
description = "PySide6 UI component library with the OmniNative dark theme"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-only"}
readme = "README.md"
authors = [
    { name = "Ricardo Gonzalez", email = "contacto@mistercontenidos.com" }
]
keywords = ["pyside6", "qt", "ui", "gui", "components", "dark-theme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "PySide6>=6.0.0",
]

[project.urls]
Homepage = "https://mistercontenidos.com/"
Repository = "https://github.com/rgcodeai/omninative-ui"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["omninative_ui*"]
